--- a/Lucky7/templates/admin/view_acc.html
+++ b/Lucky7/templates/admin/view_acc.html
@@ -404,7 +404,45 @@
         </div>
       </div>
     </main>
+    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <!-- Toastr configuration script -->
+    <script>
+      // Customize Toastr options if desired
+      toastr.options = {
+          "closeButton": true,
+          "debug": false,
+          "newestOnTop": true,
+          "progressBar": true,
+          "positionClass": "toast-top-right",
+          "preventDuplicates": true,
+          "showDuration": "300",
+          "hideDuration": "1000",
+          "timeOut": "5000",
+          "extendedTimeOut": "1000",
+          "showEasing": "swing",
+          "hideEasing": "linear",
+          "showMethod": "fadeIn",
+          "hideMethod": "fadeOut"
+      };
 
+      // Display flash messages as Toastr notifications
+      {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+              {% for category, message in messages %}
+                  toastr["{{ category }}"]("{{ message }}");
+              {% endfor %}
+          {% endif %}
+      {% endwith %}
+    </script>
+    <script type="module">
+      import preline from "https://cdn.jsdelivr.net/npm/preline@2.5.1/+esm";
+    </script>
     <script src="./node_modules/preline/dist/preline.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
   </body>
